--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=system;
+spring.data.mongodb.authentication-database=backend
+spring.data.mongodb.username=micro-service
+spring.data.mongodb.password=micro-service
